--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact us</title>
 </head>
 <body>
-    
+    <h1>Call: 01959995547</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit accusamus molestiae nihil vero tempore minima harum quas, unde nam, ullam voluptatem ipsum cumque aliquid alias excepturi aspernatur incidunt, eum soluta?</p>
 </body>
 </html>
