--- a/service.html
+++ b/service.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Services</title>
 </head>
 <body>
-    
+    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolor pariatur omnis ullam ratione minima neque similique, harum placeat quae sed nulla nesciunt magnam, nihil voluptates iure quasi aliquid! Vel.</P>
 </body>
 </html>
